--- a/portlets/private-messaging-portlet/docroot/view_messages.jspf
+++ b/portlets/private-messaging-portlet/docroot/view_messages.jspf
@@ -95,16 +95,16 @@
 					for (int i = 0; i < users.size(); i++) {
 						User curUser = users.get(i);
 
-						curUser = curUser.toEscapedModel();
+						User curUserEscaped = curUser.toEscapedModel();
 					%>
 
 						<c:choose>
 							<c:when test="<%= curUser.isActive() %>">
-								<span class="author-sender"><%= curUser.getFullName() %></span>
+								<span class="author-sender"><%= curUserEscaped.getFullName() %></span>
 							</c:when>
 							<c:otherwise>
 								<liferay-ui:icon-help message="deleted-user">
-									<span class="author-sender line-through"><%= curUser.getFullName() %></span>
+									<span class="author-sender line-through"><%= curUserEscaped.getFullName() %></span>
 								</liferay-ui:icon-help>
 							</c:otherwise>
 						</c:choose>
